--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-input::placeholder{
-    color: #B0B0B0;
-    font-size: 14px;
+input::placeholder {
+  color: #b0b0b0;
+  font-size: 14px;
+}
+
+select::placeholder {
+  color:  #858585;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  
 }
